--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ packages = [{include = "todo_app"}]
 python = "^3.10"
 fastapi = "^0.104.1"
 uvicorn = "^0.23.2"
+pytest = "^7.4.3"
+httpx = "^0.25.1"
 
 
 [build-system]
