--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,10 +11,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.10"
-      - name: Install poetry
-        run: |
-          curl -sSL https://install.python-poetry.org | python3 -I
-          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
       - name: Install dependencies
         run: poetry install --no-interaction
       - name: Run tests
