--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Install Poetry
         uses: snok/install-poetry@v1
       - name: Install dependencies
-        run: poetry install --no-interaction
+        run: poetry install --no-interaction --no-ansi
       - name: Run tests
         run: poetry run pytest
