--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,15 @@ jobs:
           python-version: "3.10"
       - name: Install Poetry
         uses: snok/install-poetry@v1
+      - uses: actions/cache@v2
+        id: venv-cache
+        with:
+          path: .venv
+          key: venv-${{ hashFiles('**/poetry.lock') }}
       - name: Install dependencies
-        run: poetry install --no-interaction --no-ansi
+        if : steps.venv-cache.outputs.cache-hit != 'true'
+        run : |
+          poetry lock
+          poetry install --no-asci
       - name: Run tests
         run: poetry run pytest
