--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,6 @@ jobs:
         if : steps.venv-cache.outputs.cache-hit != 'true'
         run : |
           poetry lock
-          poetry install --no-asci
+          poetry install --no-ansi
       - name: Run tests
         run: poetry run pytest
