--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,25 +3,26 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
-    container:
-      image: python:3.10
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - name: Install Python
+        uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-      - uses: actions/cache@v2
-        id: venv-cache
+        # see details (matrix, python-version, python-version-file, etc.)
+        # https://github.com/actions/setup-python
+      - name: Install poetry
+        uses: abatilo/actions-poetry@v2
+      - name: Setup a local virtual environment (if no poetry.toml file)
+        run: |
+          poetry config virtualenvs.create true --local
+          poetry config virtualenvs.in-project true --local
+      - uses: actions/cache@v3
+        name: Define a cache for the virtual environment based on the dependencies lock file
         with:
-          path: .venv
-          key: venv-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencies
-        if : steps.venv-cache.outputs.cache-hit != 'true'
-        run : |
-          poetry lock
-          poetry install --no-ansi
-      - name: Run tests
-        run: poetry run pytest
+          path: ./.venv
+          key: venv-${{ hashFiles('poetry.lock') }}
+      - name: Install the project dependencies
+        run: poetry install
+      - name: Run the automated tests (for example)
+        run: poetry run pytest -v
